# WS24-MyDailyImpact

./: .gitignore  OldREADME.md  README-load-servers.md  README-login-register.md  README.md  blog.md  eslint.config.js  package-lock.json  package.json  protocol11.12.24.md  rag_pipeline.ipynb  requirements.txt  summary.md  vite.config.js
README-login-register/: with_auth.md
ai/: README.md
backend/: README.md  index.js
crud-example-code/: .gitignore  README.md  dish_db.dish.json
datascience/: README.md  README_DS.md
deeplearning/: .gitignore  README.md  data_preprocessing.ipynb  gitignore.txt  merge_data.ipynb  preprocessing.ipynb  pyproject.toml  rag_pipeline.ipynb  reranking_training.py
deeplearning/data/: .gitignore  README.md  data_preprocessing.ipynb  data_synthesis2.ipynb
deeplearning/rag_pipeline/: gradio_chat.py
deeplearning/rag_pipeline/app/: main.py  pipeline.py  requirement.txt  working_pipeline.py
deeplearning/rag_pipeline/visualization_pipeline/: visualization_pipeline_script.py
deeplearning/reranker/: similarity_nn.pth  trained_model.pth  trained_reranker.pth  trained_reranker.py
deeplearning/reranker_model/: config_sentence_transformers.json
ds/: Churn_prediction.ipynb  carbonfootprint_forecast_V1.py  dummy_user_data_manual.py  dummydata_engagement.py  dummydata_forecast_user_savings.py  score_animals_lives.py  score_co2_land_water.py  score_water.py  synthetic_activity_record_data_gen.py
frontend/: README.md  vite.config.js
mdi-react/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  (+1 more)
(+224 files in other folders)
