[project]
name = "deeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "haystack-ai>=2.9.0",
    "mistral-haystack>=0.0.2",
    "mistralai>=1.5.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "qdrant-client>=1.13.2",
]
